parallel coordinates directions

--- a/parallel-coordinates/index.html
+++ b/parallel-coordinates/index.html
@@ -114,6 +114,7 @@
 
 <div id="main">
   <h2>Constraint</h2>
+  <p>Drag gray handles to constrain filters.<br/>Drag yellow ranges to move filters.<br/>The data table below will update automatically, displaying the filtered dataset.</p>
   <div id="parallel-coordinates">
   </div>
   <div style="width:760px;">
