better handle visibility

--- a/parallel-coordinates/index.html
+++ b/parallel-coordinates/index.html
@@ -92,13 +92,15 @@
     #parallel-coordinates span.scrubber span.active {
       background: hsla(42,90%,60%,0.3);
     }
+    .scrubber .active .ui-resizable-n,
+    .scrubber .active .ui-resizable-s,
     .scrubber:hover .ui-resizable-n ,
     .scrubber:hover .ui-resizable-s {
-      background: hsla(0,00%,40%,1);
+      background: hsla(0,00%,60%,1);
     }
     .scrubber .ui-resizable-n:hover ,
     .scrubber .ui-resizable-s:hover {
-      background: hsla(0,00%,20%,1);
+      background: hsla(0,00%,10%,1);
     }
     #parallel-coordinates span.scrubber .ui-resizable-n {
       top: 0px;
