--- a/parallel-coordinates/index.html
+++ b/parallel-coordinates/index.html
@@ -108,8 +108,11 @@
     #parallel-coordinates span.scrubber .ui-resizable-s {
       bottom: 0px;
     }
-
-
+    #footer {
+      padding: 60px;
+      color: #888;
+      font-size:13px;
+    }
   </style>
 </head>
 
@@ -189,7 +192,26 @@
   parallel.update();
 
   </script>
+  <div id="footer">
+    <p>
+     Copyright 2011, Boundary
+    </p>
+    <p>
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+    </p>
+    <p>
+         http://www.apache.org/licenses/LICENSE-2.0
+    </p>
+    <p>
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+    </p>
+  </div>
 </div>
-
 </body>
 </html>
