only show vegetable name

--- a/parallel-coordinates/vegetables.html
+++ b/parallel-coordinates/vegetables.html
@@ -75,12 +75,12 @@
     width: 760,
     columns: [
       'name',
-      'protein',
+/*      'protein',
       'calcium',
       'sodium',
       'fiber',
       'vitaminc',
-      'potassium'
+      'potassium'*/
     ],
     alias: {
       'name': 'Name',
