--- a/parallel-coordinates/vegetables.html
+++ b/parallel-coordinates/vegetables.html
@@ -55,12 +55,12 @@
       'potassium'
     ],
     alias: {
-      'protein': 'Protein',
-      'calcium': 'Calcium',
-      'sodium': 'Sodium',
-      'fiber': 'Fiber',
-      'vitaminc': 'Vitamin C',
-      'potassium': 'Potassium'
+      'protein': 'Protein (g)',
+      'calcium': 'Calcium (mg)',
+      'sodium': 'Sodium (mg)',
+      'fiber': 'Fiber (g)',
+      'vitaminc': 'Vitamin C (mg)',
+      'potassium': 'Potassium (mg)'
     },
     type: {
       'four': 'category'
