column reordering, but grid+pc must have same columns

--- a/parallel-coordinates/index.html
+++ b/parallel-coordinates/index.html
@@ -101,6 +101,10 @@
 
   parallel.update();
   slicky.update();
+  slicky.bind('columnsReordered', function(cols) {
+    parallel.columns = cols;
+    parallel.update()
+  });
 
   </script>
   <div id="footer">
