--- a/parallel-coordinates/vegetables.html
+++ b/parallel-coordinates/vegetables.html
@@ -34,7 +34,7 @@
   <p>Drag gray handles to constrain filters.<br/>Drag yellow ranges to move filters.<br/>The data table below will update automatically, displaying the filtered dataset.</p>
   <div id="parallel-coordinates">
   </div>
-  <div style="width:1200px;">
+  <div style="width:1360px;">
       <div id="pager" style="width:100%;height:20px;"></div>
       <div id="myGrid" style="width:100%;height:500px;"></div>
   </div>
@@ -54,7 +54,10 @@
       'sodium',
       'fiber',
       'vitaminc',
-      'potassium'
+      'potassium',
+      'fat',
+      'sugars',
+      'carbohydrate'
     ],
     alias: {
       'protein': 'Protein (g)',
@@ -62,19 +65,22 @@
       'sodium': 'Sodium (mg)',
       'fiber': 'Fiber (g)',
       'vitaminc': 'Vitamin C (mg)',
-      'potassium': 'Potassium (mg)'
+      'potassium': 'Potassium (mg)',
+      'fat': 'Fat (g)',
+      'sugars': 'Sugars (g)',
+      'carbohydrate': 'Carbohydrate (g)'
     },
     type: {
       'four': 'category'
     },
-    width: 1200,
+    width: 1360,
     height: 400,
-    gutter: { x: 50, y: 50 },
+    gutter: { x: 100, y: 50 },
   });
 
   var slicky = new grid({
     model: dimensions,
-    width: 1200,
+    width: 1360,
     columns: [
       'name',
       'protein',
@@ -82,7 +88,10 @@
       'sodium',
       'fiber',
       'vitaminc',
-      'potassium'
+      'potassium',
+      'fat',
+      'sugars',
+      'carbohydrate'
     ],
     alias: {
       'name': 'Name',
@@ -91,7 +100,10 @@
       'sodium': 'Sodium (mg)',
       'fiber': 'Fiber (g)',
       'vitaminc': 'Vitamin C (mg)',
-      'potassium': 'Potassium (mg)'
+      'potassium': 'Potassium (mg)',
+      'fat': 'Fat (g)',
+      'sugars': 'Sugars (g)',
+      'carbohydrate': 'Carbohydrate (g)'
     }
   });
 
